# tetris

./: Makefile  README.md  documentation_snake.tex  main.cpp
src/: Makefile  documentation_snake.tex  main.cpp
src/brick_game/snake/: apple.cpp  classes_snake_apple.h  functions_of_fields.cpp  game.h  main_snake.cpp  snake.cpp
src/brick_game/tetris/: field_func.c  figure.c  main_tetris.c  s21_tetris.h  states.c
src/gui/cli/snake/: frontend.cpp
src/gui/cli/tetris/: frontend.c
src/gui/desktop/desktop_snake/: CMakeLists.txt  gamewindow.cpp  gamewindow.h  main.cpp
src/gui/desktop/desktop_tetris/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/tests/snake/: test.cpp
src/tests/tetris/: test.c
